# fullstack-technical-test

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  db.sqlite3  gunicorn.conf.py  pyproject.toml
backend/backend/: settings.py  urls.py
backend/list_of_movies/: admin.py  apps.py  models.py  schema.py
backend/list_of_movies/migrations/: 0001_initial.py  0002_auto_20200611_1018.py  0003_movie_name.py  0004_remove_movie_name.py
backend/scripts/: entrypoint.sh
frontend/list_of_movies/: Dockerfile  README.md  package-lock.json  package.json
frontend/list_of_movies/public/: index.html
frontend/list_of_movies/src/: App.vue  main.js  vue-apollo.js
frontend/list_of_movies/src/assets/: style.css
frontend/list_of_movies/src/assets/css/: styles.css
frontend/list_of_movies/src/components/: Loader.vue  MovieRow.vue  MoviesTable.vue  TabMovies.vue
frontend/list_of_movies/src/components/Layout/: NavBar.vue
frontend/list_of_movies/src/components/TemplateAxios/: TemplateAxios.vue
frontend/list_of_movies/src/graphql/: AllMovies.gql  HelloWorld.gql  ListOfMovies.gql  Movies.gql  TodoItems.gql  movies.gql
frontend/list_of_movies/src/graphql/queries/: AllMovies.gql
frontend/list_of_movies/src/graphql/typeDefs/: MovieType.gql
frontend/list_of_movies/src/js/: array_sort.js
frontend/list_of_movies/src/router/: index.js
frontend/list_of_movies/src/style/: style.css
frontend/list_of_movies/src/views/: ListOfMovies.vue  TestApi.vue  TodoItems.vue
